--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-image: url("back2.png");
     background-color: gray;
     margin: 0px;
+    background-size: cover;
 }
 
 header {
