--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ section.huvudsidan {
 
 /*sidans innehåll*/
 
-/*filmer*/
+/*filmer
 .flip-box{
     background-color: transparent;
     width: 300px;
@@ -125,7 +125,7 @@ section.huvudsidan {
     color: white;
     transform: rotateY(180deg);
   }
-
+*/
 
 
 
