--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ footer ul.nav {
    
 }
 
+/*footer ends*/
 
 .runda {
 
@@ -254,13 +255,15 @@ h1 {
 /*responsive design*/
 
 @media screen and (max-width: 417px) {
-    .nav {
-       
+    footer ul.nav {
+        display: flex;
+        justify-content:center;
     }
 }
 
 @media screen and (max-width: 768px) {
-  footer.ul nav {
-     grid-template-columns: 1;
+    {
+      
+   
   }
 }
