--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ footer.my-4 {
     font-family: 'Reem Kufi';
     color: #B99973;
     margin-left: 70px;
-    margin-top: 10px;    
+    margin-top: 50px;    
 }
 
 .form-background {
@@ -246,8 +246,9 @@ footer.my-4 {
     padding: 10px;
 }
 
-h1 {
-    font-size: 20px; 
+.h1-contact {
+    font-size: 30px; 
+    margin-left: 7px;
+    
 }
-
 
