--- a/style.css
+++ b/style.css
@@ -256,14 +256,20 @@ h1 {
 
 @media screen and (max-width: 417px) {
     footer ul.nav {
-        display: flex;
-        justify-content:center;
+        
+       margin: 0px;
+    }
+
+    footer span {
+        justify-content: flex-start;
     }
 }
 
 @media screen and (max-width: 768px) {
-    {
-      
+    footer ul.nav  {
+        
+            margin: 0px;
+            justify-content: flex-start;
+         }
    
   }
-}
