--- a/style.css
+++ b/style.css
@@ -275,3 +275,11 @@ footer.my-4 {
          }
    
   }
+
+
+@media  screen and (max-width: 440px) {
+    .form-background {
+        margin: 0px;
+    }
+    
+}
