--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ section.huvudsidan {
     
     width: 80%;
     min-width: 250px;
-    max-width: 600px;
+    max-width: 766px;
     background-color: #272C2B;
     border: 1px solid #272C2B;
     border-radius: 10px;
@@ -328,4 +328,7 @@ img.galleryPics{
    
   }
 
+  /*Desktops skärmen*/
+  @media screen and (min-width: 961px){
 
+  }
