--- a/style.css
+++ b/style.css
@@ -199,10 +199,10 @@ footer.my-4 {
 
 .form-background {
     height: 450px;
-    width: 850px;
+    width: 650px;
     background-color: #272C2B;
     margin-top: 50px;
-    margin-left: 220px;
+    margin-left: 320px;
     margin-bottom: 100px;
     padding: 10px;
     border-radius: 10px;
@@ -220,6 +220,7 @@ footer.my-4 {
 
 .form-control {
     margin-left: 10px;
+    width: 10px;
 }
 
 .form-label {
@@ -229,6 +230,7 @@ footer.my-4 {
 .h1-contact {
     font-size: 30px; 
     margin-left: 7px;
+    margin-top: 30px;
     
 }
 
@@ -274,12 +276,23 @@ footer.my-4 {
     footer ul.nav {
         margin: 0px auto;
     }
+}
 
-    
-   
-   
-  }
+/* Mobile */ KONTAKT
+@media screen and (max-width: 414px) {
+    .form-background
 
+}
+
+
+
+
+/* Tablet */
+
+
+
+
+/* Desktop */
 
 
 
