--- a/style.css
+++ b/style.css
@@ -321,15 +321,12 @@ img.galleryPics{
         display: none;
     }
 
-<<<<<<< HEAD
-    .modal-fade {
+    /*.modal-fade {
         
         
     
     }
-=======
-    Den här skriver ni kod
->>>>>>> 3695ec320a20a2aa65259fbe64245c3f356a7c53
+    Den här skriver ni kod*/
 
 }
 
