--- a/style.css
+++ b/style.css
@@ -229,9 +229,10 @@ img.galleryPics{
 }
 
 .modal-content img {
-    width: 40%;
-    height: 60%;
-    padding-right: 5px;
+    width: 100;
+    height: 100%;
+    padding-top: 10%;
+    padding-right:5%;
    
 }
 .modal-dialog {
@@ -320,6 +321,19 @@ img.galleryPics{
     div.PicHolder  {
         display: none;
     }
+
+    .modal-content {
+        display: block;
+        text-align: justify;
+    }
+
+    .modal-content img {
+        width:100%;
+        padding-bottom:5%;
+
+    }
+
+    
 
 }
 
