--- a/style.css
+++ b/style.css
@@ -222,18 +222,26 @@ img.galleryPics{
 
 .modal-content h2 {
     text-align: center;
+    text-shadow: 2px 2px rgb(0, 0, 0);
+    padding-top: 1%;
 }
 
 .modal-content img {
-    width: 100;
-    height: 100%;
-    padding-top: 10%;
-    padding-right:5%;
-   
+    padding: 2%;
+    float: left;
+    padding-right: 5%; 
+    height: auto;
 }
+
+.modal-content p {
+    padding: 2%;
+    
+}
+
 .modal-dialog {
     width: 80%;
     max-width: 900px;
+    margin-top: 15%;
 }
 
  
@@ -296,7 +304,7 @@ img.galleryPics{
 /*Mobile styles*/
 @media screen and (max-width: 520px){
 
-    .nav {
+    .nav.nav-pills {
         margin-top: 30%;
     }
     
@@ -329,15 +337,37 @@ img.galleryPics{
         display: none;
     }
 
+    .modal-dialog {
+        margin: 0 auto;
+        
+    }
+
+    .modal-content h2 {
+        text-align: center;
+        text-shadow: 2px 2px rgb(0, 0, 0);
+        padding-top: 1%;
+    }
+
     .modal-content {
         display: block;
         text-align: justify;
+        padding: 3%;
     }
 
     .modal-content img {
         width:100%;
-        padding-bottom:5%;
+        padding-bottom:6%;
+        padding-right: 0%;
+        padding-top: 1%;
 
+    }
+
+    .filmcontainer {
+        display: inline-flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        
+       
     }
 
     .mb-3 {
@@ -348,16 +378,36 @@ img.galleryPics{
     .container {
         padding-bottom: 10%;
     }
+    
+  
 
 }
 
 
 /*Tablet styles*/
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 521px) and (max-width: 768px)  {
     footer ul.nav {
         margin: 0px auto;
     }
+
+    .modal-dialog {
+        margin: 0 auto;
+        margin-top:10%;
+    }
+
+    .modal-content {
+        text-align: justify;
+        padding: 3%;
+    }
+
+    .modal-content img {
+        padding: 2%;
+        float: left;
+        padding-right: 5%; 
+        height: auto;
+    }
+
 }
 
 
